--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -89,8 +89,8 @@
         <label class="form-check-label" for="terms">
           <input type="checkbox" id="terms" name="terms" [(ngModel)]="termsAccepted" #terms="ngModel"
             [class.is-invalid]="terms.invalid && terms.dirty" required class="form-check-input" />
-          By hitting the Register button, you agree to the <a href="/terms-of-service" target="_blank"
-            style="color: #31795a; text-decoration: none;">Terms of service</a> & <a href="/privacy-policy" target="_blank"
+          By hitting the Register button, you agree to the <a routerLink="/terms-of-service" target="_blank"
+            style="color: #31795a; text-decoration: none;">Terms of service</a> & <a routerLink="/privacy-policy" target="_blank"
             style="color: #31795a; text-decoration: none;">Privacy Policy</a>
         </label>
         <div *ngIf="terms.invalid && terms.dirty" class="invalid-feedback d-block">
