--- a/src/app/shared/sections/footer/footer.component.html
+++ b/src/app/shared/sections/footer/footer.component.html
@@ -5,7 +5,7 @@
         <img src="/assets/jobnetlogo2.png" loading="lazy" alt="" width="150" height="45" style="object-fit: cover;">
       </a>
       <div>
-        <a href="">jobnetsupport&#64;new.com</a>
+        <a href="mailto:jobnetsupport@new.com">jobnetsupport&#64;new.com</a>
       </div>
       <div class="mt-5">
         <img src="/assets/shape-2.svg" loading="lazy" alt="" width="55" height="55" />
@@ -15,27 +15,27 @@
       <div class="footer-category">
         <h1>Services</h1>
         <div class="footer-category-links">
-          <p><a href="/jobs">Browse Jobs</a></p>
-          <p><a href="/companies">Companies</a></p>
-          <p><a href="/candidates">Candidates</a></p>
-          <p><a href="/pricing">Pricing</a></p>
+          <p><a routerLink="/jobs">Browse Jobs</a></p>
+          <p><a routerLink="/companies">Companies</a></p>
+          <p><a routerLink="/candidates">Candidates</a></p>
+          <p><a routerLink="/pricing">Pricing</a></p>
         </div>
       </div>
       <div class="footer-category">
         <h1>Company</h1>
         <div class="footer-category-links">
-          <p><a href="/about">About Us</a></p>
-          <p><a href="/blogs">Blogs</a></p>
-          <p><a href="/faqs">FAQ's</a></p>
-          <p><a href="/contact">Contact</a></p>
+          <p><a routerLink="/about">About Us</a></p>
+          <p><a routerLink="/blogs">Blogs</a></p>
+          <p><a routerLink="/faqs">FAQ's</a></p>
+          <p><a routerLink="/contact">Contact</a></p>
         </div>
       </div>
       <div class="footer-category">
         <h1>Support</h1>
         <div class="footer-category-links">
-          <p><a href="/terms-of-service">Terms of Service</a></p>
-          <p><a href="/privacy-policy">Privacy Policy</a></p>
-          <p><a href="/cookie-policy">Cookie Policy</a></p>
+          <p><a routerLink="/terms-of-service">Terms of Service</a></p>
+          <p><a routerLink="/privacy-policy">Privacy Policy</a></p>
+          <p><a routerLink="/cookie-policy">Cookie Policy</a></p>
         </div>
 
       </div>
