--- a/src/app/features/dashboard/employer/components/my-jobs/my-jobs.component.html
+++ b/src/app/features/dashboard/employer/components/my-jobs/my-jobs.component.html
@@ -115,13 +115,13 @@
       <nav aria-label="Job listings pagination">
         <ul class="pagination mb-0">
           <li class="page-item" [class.disabled]="currentPage === 1">
-            <a class="page-link" href="#" (click)="prevPage(); $event.preventDefault();">Previous</a>
+            <a class="page-link" (click)="prevPage(); $event.preventDefault();">Previous</a>
           </li>
           <li class="page-item" *ngFor="let page of getPagesArray()" [class.active]="page === currentPage">
-            <a class="page-link" href="#" (click)="goToPage(page); $event.preventDefault();">{{ page }}</a>
+            <a class="page-link" (click)="goToPage(page); $event.preventDefault();">{{ page }}</a>
           </li>
           <li class="page-item" [class.disabled]="currentPage === totalPages">
-            <a class="page-link" href="#" (click)="nextPage(); $event.preventDefault();">Next</a>
+            <a class="page-link" (click)="nextPage(); $event.preventDefault();">Next</a>
           </li>
         </ul>
       </nav>
