--- a/src/app/shared/sections/category-list/category-list.component.html
+++ b/src/app/shared/sections/category-list/category-list.component.html
@@ -3,7 +3,7 @@
   <div class="d-flex justify-content-between align-items-end px-2">
     <h1 class="category-header">Most Demanding Categories.</h1>
     <span class="explore-all d-none d-lg-block mb-3">
-      <a class="btn" href="/jobs">Explore all fields <i class="fas fa-arrow-right"></i></a>
+      <a class="btn" routerLink="/jobs">Explore all fields <i class="fas fa-arrow-right"></i></a>
     </span>
   </div>
 
@@ -47,6 +47,6 @@
   </div>
 
   <div class="explore-all text-center mt-4 d-lg-none">
-    <a class="btn" href="/jobs">Explore all fields <i class="fas fa-arrow-right"></i></a>
+    <a class="btn" routerLink="/jobs">Explore all fields <i class="fas fa-arrow-right"></i></a>
   </div>
 </div>
