--- a/src/app/features/dashboard/admin/components/user-management/user-management.component.css
+++ b/src/app/features/dashboard/admin/components/user-management/user-management.component.css
@@ -458,6 +458,14 @@
   }
 }
 
+@media (min-width: 768.99px) {
+  .col-actions {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+  }
+}
+
 /* Fade Animation */
 .fade-in {
   animation: fadeIn 0.4s ease-out;
