--- a/src/app/features/dashboard/employer/components/my-jobs/my-jobs.component.html
+++ b/src/app/features/dashboard/employer/components/my-jobs/my-jobs.component.html
@@ -135,13 +135,13 @@
   <!-- Close Confirmation Modal -->
   <app-app-modal [isVisible]="showCloseModal" title="Confirm Close" message="Are you sure you want to close this job?"
     subtitle="Applicants will no longer be able to apply." iconClass="fas fa-exclamation-triangle" confirmText="Close"
-    cancelText="Cancel" (confirm)="confirmClose()" (cancel)="cancelClose()">
+    cancelText="Cancel" [isLoading]="isClosing" (confirm)="confirmClose()" (cancel)="cancelClose()">
   </app-app-modal>
 
   <!-- Delete Confirmation Modal -->
   <app-app-modal [isVisible]="showDeleteModal" title="Confirm Delete"
     message="Are you sure you want to delete this job?" subtitle="This action cannot be undone."
-    iconClass="fas fa-exclamation-triangle" confirmText="Delete" cancelText="Cancel" (confirm)="confirmDelete()"
+    iconClass="fas fa-exclamation-triangle" confirmText="Delete" cancelText="Cancel" [isLoading]="isDeleting" (confirm)="confirmDelete()"
     (cancel)="cancelDelete()">
   </app-app-modal>
 </div>
